--- a/style.css
+++ b/style.css
@@ -26,17 +26,20 @@
 
 }
 .light #switch button{
-    left: 50%;
+    animation: slide-in 0.4s forwards;
 }
 body{
     background: var(--bg-url);
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
+    width: 100%;
+    height: 100%;
 }
 main{
     padding: 0 24px;
     width: 360px;
+    max-width: 100%;
     margin: auto;
     margin-top: 2em;
 }
@@ -57,7 +60,7 @@ main{
 }
 #switch{
     position: relative;
-    padding: 2em;
+    padding: 2em 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -74,6 +77,10 @@ main{
     position: absolute;
     z-index: 1;
     left: 40%;
+    animation: slide-back 0.4s;
+}
+#switch button:hover{
+    outline: 8px solid var(--surface-color);
 }
 #switch span{
     display: block;
@@ -143,4 +150,29 @@ footer a {
 }
 footer ion-icon{
     padding: 0 0.5em;
+}
+
+@media (min-width: 700px){
+    :root{
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
+    .light{
+        --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
+}
+@keyframes slide-in {
+    from{
+        left: 40%;
+    }
+    to {
+        left: 50%;
+    }
+}
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 40%;
+    }
 }
